--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,4 @@
 <resources>
-    <string name="app_name">Aid</string>
     <string name="prompt_id">ID</string>
     <string name="prompt_password">Password</string>
     <string name="action_sign_in">Sign in or register</string>
@@ -42,7 +41,6 @@
     <string name="title_activity_age_edit">修改年龄</string>
     <string name="title_activity_sex_edit">修改性别</string>
     <string name="title_forum">Forum</string>
-    <string name="title_message">Message</string>
     <string name="task_tab">任务</string>
     <string name="resources_tab">资源</string>
     <string name="new_button_tab">+ 新建</string>
@@ -62,4 +60,12 @@
     <string name="save">保存</string>
     <string name="cancel">取消</string>
     <string name="title_task_resources">任务资源</string>
+    <string name="app_name">疫情互助</string>
+    <string name="title_info">信息</string>
+    <string name="title_activity_detail">detailActivity</string>
+    <string name="title_message">消息</string>
+    <string name="title_activity_data">dataActivity</string>
+    <!-- Strings used for fragments for navigation -->
+    <!-- Strings used for fragments for navigation -->
+
 </resources>
