--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,14 @@
 <resources>
+    <string name="app_name">疫情互助</string>
+    <string name="title_info">信息</string>
+    <string name="title_dashboard">任务</string>
+    <string name="title_notifications">我的</string>
+    <string name="title_activity_detail">detailActivity</string>
+    <string name="title_message">消息</string>
+    <string name="title_activity_data">dataActivity</string>
+    <!-- Strings used for fragments for navigation -->
+    <string name="next">Next</string>
+    <string name="previous">Previous</string>
     <string name="prompt_id">ID</string>
     <string name="prompt_password">Password</string>
     <string name="action_sign_in">Sign in or register</string>
@@ -8,13 +18,8 @@
     <string name="invalid_password">Password must be >5 characters</string>
     <string name="login_failed">"Login failed"</string>
     <string name="title_activity_mine">我的</string>
-    <string name="title_home">Home</string>
-    <string name="title_dashboard">Dashboard</string>
-    <string name="title_notifications">我的</string>
     <string name="title_activity_register">注册</string>
     <!-- Strings used for fragments for navigation -->
-    <string name="next">Next</string>
-    <string name="previous">Previous</string>
     <string name="identity_text">账号</string>
     <string name="password_text">密码</string>
     <string name="fa_user">&#xf007;</string>
@@ -40,7 +45,7 @@
     <string name="title_activity_name_edit">修改昵称</string>
     <string name="title_activity_age_edit">修改年龄</string>
     <string name="title_activity_sex_edit">修改性别</string>
-    <string name="title_forum">Forum</string>
+    <string name="title_forum">论坛</string>
     <string name="task_tab">任务</string>
     <string name="resources_tab">资源</string>
     <string name="new_button_tab">+ 新建</string>
@@ -60,12 +65,4 @@
     <string name="save">保存</string>
     <string name="cancel">取消</string>
     <string name="title_task_resources">任务资源</string>
-    <string name="app_name">疫情互助</string>
-    <string name="title_info">信息</string>
-    <string name="title_activity_detail">detailActivity</string>
-    <string name="title_message">消息</string>
-    <string name="title_activity_data">dataActivity</string>
-    <!-- Strings used for fragments for navigation -->
-    <!-- Strings used for fragments for navigation -->
-
 </resources>
